# cardcaster

./: .gitignore
src/engine/: CMakeLists.txt
src/engine/include/: Engine.cpp  Engine.hpp
src/engine/src/: Action.cpp  Action.hpp  Card.cpp  Card.hpp  Color.hpp  ManaCost.cpp  ManaCost.hpp  Player.cpp  Player.hpp  TriggerReplacementEffect.cpp  TriggerReplacementEffect.hpp  TriggeredAbility.cpp  TriggeredAbility.hpp
src/engine/src/actions/: Draw.cpp  Draw.hpp  TurnBasedAction.cpp  TurnBasedAction.hpp
src/engine/src/cards/: AdantoVanguard.cpp  AdantoVanguard.hpp  AdelineResplendentCathar.cpp  AdelineResplendentCathar.hpp  AncestralRecall.cpp  AncestralRecall.hpp  Armageddon.cpp  Armageddon.hpp  AuriokSalvagers.cpp  AuriokSalvagers.hpp  Balance.cpp  Balance.hpp  BladeSplicer.cpp  BladeSplicer.hpp  BoonBringerValkyrie.cpp  BoonBringerValkyrie.hpp  CatharCommando.cpp  CatharCommando.hpp  Condemn.cpp  Condemn.hpp  ContainmentPriest.cpp  ContainmentPriest.hpp  CouncilsJudgment.cpp  CouncilsJudgment.hpp  EleshNornGrandCenobite.cpp  EleshNornGrandCenobite.hpp  EliteSpellbinder.cpp  EliteSpellbinder.hpp  ElspethKnightErrant.cpp  ElspethKnightErrant.hpp  ElspethSunsChampion.cpp  ElspethSunsChampion.hpp  EmrakulTheAeonsThorn.cpp  EmrakulTheAeonsThorn.hpp  EnlightenedTutor.cpp  EnlightenedTutor.hpp  EsperSentinel.cpp  EsperSentinel.hpp  Flickerwisp.cpp  Flickerwisp.hpp  (+94 more)
src/engine/src/triggers/: Cast.cpp  Cast.hpp  CreateToken.cpp  CreateToken.hpp  DrawTrigger.cpp  DrawTrigger.hpp  EntersTheBattlefield.cpp  EntersTheBattlefield.hpp  EntersTheGraveyard.cpp  EntersTheGraveyard.hpp  (+8 more)
(+25 files in other folders)
